<resources>
    <string name="app_name">My Application</string>
    <string name="btn_ok">确认</string>
    <string name="userName">用户名:</string>
    <string name="entryUserName">请输入手机号或邮箱</string>
    <string name="userPwd">密　码:</string>
    <string name="entryPwd">请输入密码</string>
    <string name="remberPwd">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="change">点击更换</string>
</resources>
