<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication.MainActivity">
   <TextView
       android:gravity="center"
       android:textSize="30dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/userName"
       android:id="@+id/tv_userName"/>
   <EditText
       android:layout_alignParentRight="true"
       android:gravity="center"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_toRightOf="@id/tv_userName"

       android:hint="@string/entryUserName"
       android:textColor="#1e00ff"

       android:id="@+id/et_entryUserName"/>
   <TextView
       android:gravity="center"
       android:textSize="30dp"
       android:layout_below="@id/tv_userName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/userPwd"
       android:id="@+id/tv_userPwd"/>
   <EditText
       android:gravity="center"
       android:layout_alignParentRight="true"
       android:layout_toRightOf="@id/tv_userPwd"
       android:layout_width="wrap_content"
       android:maxLength="6"
       android:layout_height="wrap_content"
       android:inputType="numberPassword"

       android:hint="@string/entryPwd"
       android:id="@+id/et_entryPwd"
       android:layout_below="@id/tv_userName"/>
   <CheckBox
       android:textSize="20dp"
       android:layout_marginTop="10dp"
       android:layout_alignParentRight="true"
       android:layout_below="@id/et_entryPwd"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/remberPwd"
       android:id="@+id/cb_remberPwd"/>
   <LinearLayout

       android:layout_marginTop="50dp"
       android:layout_below="@id/et_entryPwd"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:id="@+id/linearLayout">
      <Button
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/login"
          android:id="@+id/btn_login"/>
      <Button
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/register"
          android:id="@+id/btn_register"/>

   </LinearLayout>
   <ImageView

       android:layout_marginTop="100dp"
       android:layout_centerHorizontal="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/cb_remberPwd"
       android:id="@+id/iv_image"
       android:src="@drawable/ic_image"/>
   <Button
       android:layout_below="@id/iv_image"

       android:layout_centerHorizontal="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/change"
       android:id="@+id/btn_change"/>
   <ProgressBar
       android:layout_below="@id/btn_change"
       android:layout_centerHorizontal="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/pb_bar"/>



</RelativeLayout>
